Issue: Hard  to use Wekan on mobile because of UI/UX issues #953 Resolved #953

--- a/client/components/main/layouts.styl
+++ b/client/components/main/layouts.styl
@@ -385,8 +385,8 @@ a
 
 @media screen and (max-width: 800px)
   #content
-    margin: 1px 0px 49px 0px
-    height: calc(100% - 96px)
+    margin: 1px 0px 0px 0px
+    height: calc(100% - 0px)
 
     > .wrapper
       margin-top: 0px
